testdata/baselines/reference/compiler/tluaVarargMisplaced.errors.txt
tluaVarargMisplaced.tlua(9,26): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(11,26): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(21,32): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(24,9): error TLUA2322: Type 'number | nil' is not assignable to type 'string'.
  Type 'nil' is not assignable to type 'string'.
tluaVarargMisplaced.tlua(27,39): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(34,25): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(36,9): error TLUA2322: Type 'string | nil' is not assignable to type 'number'.
  Type 'nil' is not assignable to type 'number'.
tluaVarargMisplaced.tlua(43,28): error TLUA1014: A rest parameter must be last in a parameter list.
tluaVarargMisplaced.tlua(44,12): error TLUA2345: Argument of type 'number | nil' is not assignable to parameter of type 'number'.
  Type 'nil' is not assignable to type 'number'.


==== tluaVarargMisplaced.tlua (9 errors) ====
    // A misplaced vararg gets exactly one error: the parameter list is wrong (a rest
    // must be last). The function still *declares* a vararg, so `...` in its body
    // binds to that vararg rather than cascading into "a '...' expression is only
    // allowed inside a vararg function" on a function that visibly has one.
    //
    // This lives in its own file because grammar errors are suppressed in a file
    // that already has parse errors, and tluaVarargErrors.tlua is full of them by
    // design.
    declare function notLast(...: number, a: number): void;
                             ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
    
    function notLastWithBody(...: number, a: number): void
                             ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
      // Binds to the misplaced vararg: no second diagnostic here.
      local first = ...;
      local rest = {...};
    end
    
    // The misplaced vararg's annotation still means what it says: its symbol is
    // treated as a fixed parameter (never array-wrapped), and the body's `...`
    // still reads values of the ELEMENT type -- not `any`, and not the annotation
    // with a layer stripped.
    function annotationStillChecks(...: number, a: string): void
                                   ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
      // `| nil` as for any single-value read of `...`: the pack may be empty.
      local n: number | nil = ...;
      local bad: string = ...; // error names number, not any
            ~~~
!!! error TLUA2322: Type 'number | nil' is not assignable to type 'string'.
!!! error TLUA2322:   Type 'nil' is not assignable to type 'string'.
    end
    
    function arrayAnnotationKeepsItsLayer(...: string[], a: number): void
                                          ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
      // Each value is a whole string[]; unwrapping would leave `string`.
      local arr: string[] | nil = (...);
    end
    
    // With two varargs the LAST one is the function's vararg -- it is the one in
    // (or nearest) the legal position.
    function lastVarargWins(...: number, ...: string): void
                            ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
      local s: string | nil = ...;
      local bad: number = ...; // error names string, not number's vararg
            ~~~
!!! error TLUA2322: Type 'string | nil' is not assignable to type 'number'.
!!! error TLUA2322:   Type 'nil' is not assignable to type 'number'.
    end
    
    // A call with a misplaced-vararg tail keeps the tail arity treatment: the
    // `...` may pass more values, so only the rest-must-be-last error and the
    // per-position type errors apply.
    declare function takesTwo(a: number, b: number): void;
    function tailFromMisplaced(...: number, a: string): void
                               ~~~
!!! error TLUA1014: A rest parameter must be last in a parameter list.
      takesTwo(...);
               ~~~
!!! error TLUA2345: Argument of type 'number | nil' is not assignable to parameter of type 'number'.
!!! error TLUA2345:   Type 'nil' is not assignable to type 'number'.
    end
    